# audio-transcriber-openai-whisper

./: CLAUDE.md  README.md  audio_capture.py  audio_playback.py  config.py  main.py  pyproject.toml  requirements.txt  transcriber_openai.py
backup/: debug_transcription.py  debug_whisper_input.py  test_audio_quality.py  test_fixed_transcription.py  test_improved_transcription.py  test_improved_transcription_final.py  test_no_calibration.py  test_noise_handling.py  test_setup.py  test_simple_playback.py  test_transcription_fix.py  test_vad.py  test_vad_tuning.py  test_verification_workflow.py  transcriber.py
test/: test_integrated_app.py  test_openai_whisper.py
